# fintime

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PLAN.md  agents.html  app.py  config.py  conftest.py  formatting.py  pyproject.toml  run.bat  ui.py
.streamlit/: config.toml
agents/: openrouter_client.py  personas.py
analytics/: dcf.py  ratios.py  risk.py  technicals.py
data/: __init__.py  cache.py  fallback_source.py  fmp_source.py  yahoo.py  yfinance_source.py
pages/: 1_Quote.py  2_Watchlist.py  3_Analytics.py  4_Agents.py
storage/: db.py
tests/: test_dcf.py  test_fmp_source.py  test_formatting.py  test_openrouter_client.py  test_personas.py  test_ratios.py  test_risk.py  test_storage.py  test_technicals.py  test_yahoo_parsing.py
