[project]
name = "fincent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
